--- a/Starter_Code.ipynb
+++ b/Starter_Code.ipynb
@@ -852,22 +852,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense_3 (Dense)             (None, 5)                 220       \n",
+      " dense (Dense)               (None, 5)                 220       \n",
       "                                                                 \n",
-      " dense_4 (Dense)             (None, 10)                60        \n",
+      " dense_1 (Dense)             (None, 10)                60        \n",
       "                                                                 \n",
-      " dense_5 (Dense)             (None, 1)                 11        \n",
+      " dense_2 (Dense)             (None, 1)                 11        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 291\n",
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -921,105 +921,105 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "804/804 [==============================] - 4s 2ms/step - loss: 0.6394 - accuracy: 0.6456\n",
+      "804/804 [==============================] - 4s 2ms/step - loss: 0.6164 - accuracy: 0.6890\n",
       "Epoch 2/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5742 - accuracy: 0.7235\n",
+      "804/804 [==============================] - 3s 4ms/step - loss: 0.5683 - accuracy: 0.7263\n",
       "Epoch 3/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5636 - accuracy: 0.7265\n",
+      "804/804 [==============================] - 3s 4ms/step - loss: 0.5595 - accuracy: 0.7287\n",
       "Epoch 4/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5591 - accuracy: 0.7279\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5562 - accuracy: 0.7305\n",
       "Epoch 5/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5562 - accuracy: 0.7289\n",
+      "804/804 [==============================] - 3s 3ms/step - loss: 0.5547 - accuracy: 0.7312\n",
       "Epoch 6/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5543 - accuracy: 0.7306\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5541 - accuracy: 0.7310\n",
       "Epoch 7/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5532 - accuracy: 0.7311\n",
+      "804/804 [==============================] - 3s 3ms/step - loss: 0.5531 - accuracy: 0.7315\n",
       "Epoch 8/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5524 - accuracy: 0.7309\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5527 - accuracy: 0.7320\n",
       "Epoch 9/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5517 - accuracy: 0.7329\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5520 - accuracy: 0.7315\n",
       "Epoch 10/50\n",
-      "804/804 [==============================] - 3s 3ms/step - loss: 0.5512 - accuracy: 0.7319\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5519 - accuracy: 0.7325\n",
       "Epoch 11/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5506 - accuracy: 0.7323\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5516 - accuracy: 0.7320\n",
       "Epoch 12/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5504 - accuracy: 0.7335\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5513 - accuracy: 0.7320\n",
       "Epoch 13/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5498 - accuracy: 0.7327\n",
+      "804/804 [==============================] - 3s 3ms/step - loss: 0.5508 - accuracy: 0.7327\n",
       "Epoch 14/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5496 - accuracy: 0.7330\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5507 - accuracy: 0.7327\n",
       "Epoch 15/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5492 - accuracy: 0.7330\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5505 - accuracy: 0.7332\n",
       "Epoch 16/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5491 - accuracy: 0.7322\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5506 - accuracy: 0.7332\n",
       "Epoch 17/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5490 - accuracy: 0.7336\n",
+      "804/804 [==============================] - 3s 3ms/step - loss: 0.5503 - accuracy: 0.7332\n",
       "Epoch 18/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5485 - accuracy: 0.7332\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5501 - accuracy: 0.7330\n",
       "Epoch 19/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5487 - accuracy: 0.7325\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5503 - accuracy: 0.7328\n",
       "Epoch 20/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5483 - accuracy: 0.7337\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5499 - accuracy: 0.7324\n",
       "Epoch 21/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5480 - accuracy: 0.7332\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5502 - accuracy: 0.7331\n",
       "Epoch 22/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5477 - accuracy: 0.7338\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5497 - accuracy: 0.7336\n",
       "Epoch 23/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5476 - accuracy: 0.7339\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5497 - accuracy: 0.7334\n",
       "Epoch 24/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5473 - accuracy: 0.7335\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5493 - accuracy: 0.7330\n",
       "Epoch 25/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5476 - accuracy: 0.7339\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5495 - accuracy: 0.7339\n",
       "Epoch 26/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5473 - accuracy: 0.7336\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5493 - accuracy: 0.7341\n",
       "Epoch 27/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5469 - accuracy: 0.7343\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5492 - accuracy: 0.7335\n",
       "Epoch 28/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5471 - accuracy: 0.7344\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5492 - accuracy: 0.7334\n",
       "Epoch 29/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5474 - accuracy: 0.7330\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5487 - accuracy: 0.7338\n",
       "Epoch 30/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5471 - accuracy: 0.7335\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5488 - accuracy: 0.7338\n",
       "Epoch 31/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5469 - accuracy: 0.7342\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5487 - accuracy: 0.7334\n",
       "Epoch 32/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5467 - accuracy: 0.7335\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5487 - accuracy: 0.7333\n",
       "Epoch 33/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5467 - accuracy: 0.7341\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5488 - accuracy: 0.7337\n",
       "Epoch 34/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5466 - accuracy: 0.7339\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5484 - accuracy: 0.7335\n",
       "Epoch 35/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5467 - accuracy: 0.7332\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5488 - accuracy: 0.7341\n",
       "Epoch 36/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5463 - accuracy: 0.7341\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5486 - accuracy: 0.7334\n",
       "Epoch 37/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5466 - accuracy: 0.7338\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5486 - accuracy: 0.7332\n",
       "Epoch 38/50\n",
-      "804/804 [==============================] - 3s 4ms/step - loss: 0.5466 - accuracy: 0.7336\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5483 - accuracy: 0.7335\n",
       "Epoch 39/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5467 - accuracy: 0.7339\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5483 - accuracy: 0.7337\n",
       "Epoch 40/50\n",
-      "804/804 [==============================] - 3s 3ms/step - loss: 0.5467 - accuracy: 0.7339\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5484 - accuracy: 0.7331\n",
       "Epoch 41/50\n",
-      "804/804 [==============================] - 3s 4ms/step - loss: 0.5466 - accuracy: 0.7332\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5482 - accuracy: 0.7334\n",
       "Epoch 42/50\n",
-      "804/804 [==============================] - 3s 4ms/step - loss: 0.5465 - accuracy: 0.7337\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5484 - accuracy: 0.7338\n",
       "Epoch 43/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5462 - accuracy: 0.7349\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5480 - accuracy: 0.7341\n",
       "Epoch 44/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5466 - accuracy: 0.7334\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5479 - accuracy: 0.7342\n",
       "Epoch 45/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5463 - accuracy: 0.7332\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5481 - accuracy: 0.7336\n",
       "Epoch 46/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5462 - accuracy: 0.7342\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5479 - accuracy: 0.7339\n",
       "Epoch 47/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5461 - accuracy: 0.7342\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5478 - accuracy: 0.7340\n",
       "Epoch 48/50\n",
-      "804/804 [==============================] - 2s 3ms/step - loss: 0.5461 - accuracy: 0.7343\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.5479 - accuracy: 0.7345\n",
       "Epoch 49/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5464 - accuracy: 0.7338\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.5479 - accuracy: 0.7342\n",
       "Epoch 50/50\n",
-      "804/804 [==============================] - 2s 2ms/step - loss: 0.5459 - accuracy: 0.7342\n"
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5477 - accuracy: 0.7338\n"
      ]
     }
    ],
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
